k8s/manifests/infra/keycloak_ingress_alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/stickiness.enabled: "true"
    alb.ingress.kubernetes.io/stickiness.lb_cookie.duration_seconds: "86400"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:418295717086:certificate/733a306a-a14d-4214-a653-721435d33fa0"
    # Add SSL redirect
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # Add successful response code ranges
    alb.ingress.kubernetes.io/success-codes: '200-399'
    # Add health check path
    alb.ingress.kubernetes.io/healthcheck-path: '/health'
spec:
  ingressClassName: alb
  rules:
    - host: preferedsolutions.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
